  - Updated the PHP Email Form to V3.1

Version: 3.0.1
  - Updated Bootstrap to version 5.0.0-beta2
  - Updated all outdated third party vendor libraries to their latest versions

Version: 3.0.0
  - The template does not require jQuery anymore
  - Removed jQuery and all the jQuery plugins
  - The assets/js/main.js was rewritten completely with vanilla Javascript. No more jQuery code
  - Restructured the dev version for better development experience
  - Updated the PHP Email Form to V3.0 - No jQuery dependency. Added attachment support

Version: 2.0.3
  - Updated Bootstrap to version 5.0.0-beta1
  - Updated the PHP Email Form to v2.3
  - Other small fixes and improvements
  
Version: 2.0.2
  - Updated Bootstrap to version 5.0.0-alpha3
  - Updated all outdated third party vendor libraries to their latest versions

Version: 2.0.1
  - Update Bootstrap v5.0 to Alpha 2
  - Updated all outdated third party vendor libraries to their latest versions
  
Version: 2.0.0
  - Initial release with using the Bootstrap v5.0 (Alpha)
  
Version: 1.4.0
  - Updated the PHP Email Form to v2.1
  - Other small fixes and improvements

Version: 1.3.0
  - Updated Bootstrap to version 4.5.0
  - Updated the PHP Email Form library to version 2.0 with reCaptcha support
  - Aded inner-page.html tempalte
  - Added smooth scroll on page load with hash links in the url
  - Updated all outdated third party vendor libraries to their latest versions
  - Other small fixes and improvements
  
Version: 1.2.1
  - Fixed mobile nav toggle button in iPhones
   - 2025-11-29: Site now enforces dark mode only and the theme toggle button was removed from index.html
   - 2025-11-29: Site now enforces dark mode only and the theme toggle button was removed from index.html
   - 2025-11-29: Fix — X (Twitter) brand icon updated to a working Font Awesome class in index.html
  
Version: 1.2.0
  - Added portfolio details page

Version: 1.1.0
  - Added navigation active state on scroll

Version: 1.0.0
  - Initial Release